--- a/apps/mobile/locales/zh.json
+++ b/apps/mobile/locales/zh.json
@@ -531,7 +531,7 @@
     "actionCannotBeUndone": "此操作无法撤销",
     "accountWillBeDeleted": "你的账户将被永久删除",
     "whatWillBeDeleted": "将被删除的内容",
-    "allAgents": "你的所有智能体和智能体版本",
+    "allAgents": "你的所有 Workers 和 Worker 版本",
     "allThreads": "你的所有对话线程和会话",
     "allCredentials": "你的所有凭据和集成",
     "subscriptionData": "你的订阅和计费数据",
@@ -626,7 +626,7 @@
   },
   "integrations": {
     "title": "集成",
-    "description": "连接你喜爱的应用和服务，自动化工作流程并扩展你的智能体能力。",
+    "description": "连接你喜爱的应用和服务，自动化工作流程并扩展你的 Worker 能力。",
     "connectApps": "连接你的应用",
     "externalApps": "外部应用",
     "externalAppsDescription": "连接热门应用和服务",
@@ -635,7 +635,7 @@
     "composioApps": "Composio应用",
     "composioAppsDescription": "连接数百个商业应用和服务",
     "connected": "已连接",
-    "connectedToAgent": "已连接到此智能体",
+    "connectedToAgent": "已连接到此 Worker",
     "available": "可用应用",
     "connect": "连接",
     "setup": "设置",
@@ -690,7 +690,7 @@
     },
     "toolsSelector": {
       "configureTools": "配置{{app}}工具",
-      "selectTools": "选择要添加到智能体的工具",
+      "selectTools": "选择要添加到 Worker 的工具",
       "readyToConfigureTools": "准备配置工具",
       "selected": "已选择{{count}}/{{total}}",
       "selectAll": "全选",
