--- a/frontend/translations/de.json
+++ b/frontend/translations/de.json
@@ -78,7 +78,7 @@
         "dialogTitle": "Konto löschen",
         "warning": "Diese Aktion kann nach 30 Tagen nicht rückgängig gemacht werden",
         "whenDelete": "Wenn du dein Konto löschst:",
-        "agentsDeleted": "Alle deine Agenten und Agent-Versionen werden gelöscht",
+        "agentsDeleted": "Alle deine Worker und Worker-Versionen werden gelöscht",
         "threadsDeleted": "Alle deine Threads und Unterhaltungen werden gelöscht",
         "credentialsRemoved": "Alle deine Anmeldedaten und Integrationen werden entfernt",
         "subscriptionCancelled": "Dein Abonnement wird gekündigt",
@@ -196,12 +196,12 @@
     "search": "Suchen",
     "scheduledTrigger": "Geplanter Trigger",
     "eventBasedTrigger": "Ereignisbasierter Trigger",
-    "chooseAgent": "Agent auswählen",
+    "chooseAgent": "Worker auswählen",
     "schedule": "Zeitplan",
-    "agentInstructions": "Agent-Anweisungen",
-    "agentInstructionsDescription": "Benutzerdefinierter Prompt für den Agenten",
-    "assignedAgent": "Zugewiesener Agent",
-    "unknownAgent": "Unbekannter Agent",
+    "agentInstructions": "Worker-Anweisungen",
+    "agentInstructionsDescription": "Benutzerdefinierter Prompt für den Worker",
+    "assignedAgent": "Zugewiesener Worker",
+    "unknownAgent": "Unbekannter Worker",
     "technicalDetails": "Technische Details",
     "type": "Typ",
     "provider": "Anbieter",
@@ -231,8 +231,8 @@
     "createScheduledTask": "Geplante Aufgabe erstellen",
     "editAppBasedTask": "App-basierte Aufgabe bearbeiten",
     "createAppBasedTask": "App-basierte Aufgabe erstellen",
-    "updateAgentForTask": "Agent für diese Aufgabe aktualisieren",
-    "selectAgentForTask": "Wähle zuerst den Agenten aus, der diese Aufgabe bearbeiten soll",
+    "updateAgentForTask": "Worker für diese Aufgabe aktualisieren",
+    "selectAgentForTask": "Wähle zuerst den Worker aus, der diese Aufgabe bearbeiten soll",
     "createNew": "Neu erstellen",
     "notConfigured": "Nicht konfiguriert",
     "every15Minutes": "Alle 15 Minuten",
@@ -250,11 +250,11 @@
     "new": "Neu",
     "upgrade": "Upgrade",
     "chats": "Chats",
-    "agents": "Agenten",
+    "agents": "Worker",
     "workers": "Worker",
     "triggers": "Trigger",
     "newChat": "Neuer Chat",
-    "newAgent": "Neuer Agent",
+    "newAgent": "Neuer Worker",
     "settings": "Einstellungen",
     "logout": "Abmelden",
     "openMenu": "Menü öffnen",
@@ -315,7 +315,7 @@
     "scheduledTriggers": "Geplante Trigger",
     "appTriggers": "App-Trigger",
     "limitsExceeded": "Du hast dein Chat-Limit erreicht. Upgraden deinen Plan, um mehr Chats zu erstellen.",
-    "agentInitiatedSuccessfully": "Agent erfolgreich gestartet",
+    "agentInitiatedSuccessfully": "Worker erfolgreich gestartet",
     "aiAssistantReady": "Dein KI-Assistent ist bereit zu helfen",
     "greetings": {
       "morning": [
@@ -374,7 +374,7 @@
     "instructions": "Anweisungen",
     "knowledge": "Wissen",
     "triggers": "Trigger",
-    "agents": "Agenten",
+    "agents": "Worker",
     "superWorker": "Super Worker",
     "searchWorkers": "Worker suchen...",
     "myWorkers": "Meine Worker",
@@ -395,17 +395,17 @@
     "feedbackSubmitFailed": "Feedback konnte nicht übermittelt werden"
   },
   "agents": {
-    "title": "Agenten",
-    "create": "Agent erstellen",
+    "title": "Worker",
+    "create": "Worker erstellen",
     "createNewWorker": "Neuen Worker erstellen",
-    "edit": "Agent bearbeiten",
-    "delete": "Agent löschen",
+    "edit": "Worker bearbeiten",
+    "delete": "Worker löschen",
     "name": "Name",
     "description": "Beschreibung",
     "model": "Modell",
     "systemPrompt": "System-Prompt",
-    "systemPromptPlaceholder": "Definiere, wie sich dein Agent verhalten soll...",
-    "customizeIcon": "Klicke, um das Agenten-Icon anzupassen"
+    "systemPromptPlaceholder": "Definiere, wie sich dein Worker verhalten soll...",
+    "customizeIcon": "Klicke, um das Worker-Icon anzupassen"
   },
   "threads": {
     "title": "Threads",
@@ -449,7 +449,7 @@
         "aiModelUsage": {
           "title": "KI-Modellnutzung",
           "description": "Der Haupttreiber des Credit-Verbrauchs",
-          "content": "Verschiedene KI-Modelle haben unterschiedliche Kosten basierend auf ihren Fähigkeiten und der Token-Nutzung. Credits werden für Eingabe-Tokens (deine Prompts und Kontext), Ausgabe-Tokens (Agent-Antworten) verbraucht und variieren je nach Modell-Tier (Claude, GPT usw.)."
+          "content": "Verschiedene KI-Modelle haben unterschiedliche Kosten basierend auf ihren Fähigkeiten und der Token-Nutzung. Credits werden für Eingabe-Tokens (deine Prompts und Kontext), Ausgabe-Tokens (Worker-Antworten) verbraucht und variieren je nach Modell-Tier (Claude, GPT usw.)."
         },
         "pricingModel": {
           "title": "Preismodell",
@@ -712,26 +712,26 @@
   "agentRunLimit": {
     "gotIt": "Verstanden",
     "parallelRunsLimitReached": "Limit für parallele Ausführungen erreicht",
-    "parallelRunsLimitDescription": "Du hast die maximale Anzahl paralleler Agenten-Ausführungen erreicht.",
+    "parallelRunsLimitDescription": "Du hast die maximale Anzahl paralleler Worker-Ausführungen erreicht.",
     "needMoreParallelRuns": "Mehr parallele Ausführungen benötigt?",
-    "upgradeDescription": "Upgraden deinen Plan, um mehrere Agenten gleichzeitig auszuführen und deine Produktivität zu steigern.",
+    "upgradeDescription": "Upgraden deinen Plan, um mehrere Worker gleichzeitig auszuführen und deine Produktivität zu steigern.",
     "upgradePlan": "Plan upgraden",
     "currentlyRunningAgents": "Aktuell laufende Agenten",
     "loadingThreads": "Threads werden geladen...",
-    "foundRunningAgents": "{count} laufende Agenten gefunden, aber Thread-Details konnten nicht geladen werden.",
+    "foundRunningAgents": "{count} laufende Worker gefunden, aber Thread-Details konnten nicht geladen werden.",
     "threadIds": "Thread-IDs: {ids}",
     "moreRunning": "+{count} weitere laufen",
     "whatCanYouDo": "Was kannst du tun?",
-    "stopAgentsHint": "Klicke auf die Stopp-Schaltfläche, um laufende Agenten zu stoppen",
-    "waitForCompletion": "Warte, bis ein Agent automatisch abgeschlossen ist",
+    "stopAgentsHint": "Klicke auf die Stopp-Schaltfläche, um laufende Worker zu stoppen",
+    "waitForCompletion": "Warte, bis ein Worker automatisch abgeschlossen ist",
     "upgradeYourPlan": "Upgraden deinen Plan",
     "forMoreParallelRuns": "für mehr parallele Ausführungen",
-    "stopAgent": "Agent stoppen",
-    "stopThisAgent": "Diesen Agenten stoppen",
+    "stopAgent": "Worker stoppen",
+    "stopThisAgent": "Diesen Worker stoppen",
     "openThread": "Thread öffnen",
-    "agentStoppedSuccessfully": "Agent erfolgreich gestoppt",
-    "failedToStopAgent": "Agent konnte nicht gestoppt werden",
-    "upgradeToRunMore": "Upgraden, um mehr Agenten parallel auszuführen"
+    "agentStoppedSuccessfully": "Worker erfolgreich gestoppt",
+    "failedToStopAgent": "Worker konnte nicht gestoppt werden",
+    "upgradeToRunMore": "Upgraden, um mehr Worker parallel auszuführen"
   },
   "errors": {
     "generic": "Ein Fehler ist aufgetreten",
