--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -196,12 +196,12 @@
     "search": "Search",
     "scheduledTrigger": "Scheduled Trigger",
     "eventBasedTrigger": "Event-based Trigger",
-    "chooseAgent": "Choose Agent",
+    "chooseAgent": "Choose Worker",
     "schedule": "Schedule",
-    "agentInstructions": "Agent Instructions",
-    "agentInstructionsDescription": "Custom prompt for the agent",
-    "assignedAgent": "Assigned Agent",
-    "unknownAgent": "Unknown Agent",
+    "agentInstructions": "Worker Instructions",
+    "agentInstructionsDescription": "Custom prompt for the Worker",
+    "assignedAgent": "Assigned Worker",
+    "unknownAgent": "Unknown Worker",
     "technicalDetails": "Technical Details",
     "type": "Type",
     "provider": "Provider",
@@ -218,7 +218,7 @@
     "deleteTaskFailed": "Failed to delete task",
     "taskUpdatedSuccess": "Task updated successfully",
     "updateTaskFailed": "Failed to update task",
-    "pleaseSelectAgent": "Please select an agent",
+    "pleaseSelectAgent": "Please select a Worker",
     "defaultScheduledTriggerName": "Scheduled Trigger",
     "defaultScheduledTriggerDescription": "Automatically scheduled trigger",
     "scheduleTriggerUpdated": "Schedule trigger updated successfully",
@@ -250,11 +250,11 @@
     "new": "New",
     "upgrade": "Upgrade",
     "chats": "Chats",
-    "agents": "Agents",
+    "agents": "Workers",
     "workers": "Workers",
     "triggers": "Triggers",
     "newChat": "New Chat",
-    "newAgent": "New Agent",
+    "newAgent": "New Worker",
     "settings": "Settings",
     "logout": "Log out",
     "openMenu": "Open menu",
@@ -314,7 +314,7 @@
     "scheduledTriggers": "Scheduled Triggers",
     "appTriggers": "App Triggers",
     "limitsExceeded": "You've reached your chat limit. Upgrade your plan to create more chats.",
-    "agentInitiatedSuccessfully": "Agent initiated successfully",
+    "agentInitiatedSuccessfully": "Worker initiated successfully",
     "aiAssistantReady": "Your AI assistant is ready to help",
     "greetings": {
       "morning": [
@@ -394,17 +394,17 @@
     "feedbackSubmitFailed": "Failed to submit feedback"
   },
   "agents": {
-    "title": "Agents",
-    "create": "Create Agent",
+    "title": "Workers",
+    "create": "Create Worker",
     "createNewWorker": "Create New Worker",
-    "edit": "Edit Agent",
-    "delete": "Delete Agent",
+    "edit": "Edit Worker",
+    "delete": "Delete Worker",
     "name": "Name",
     "description": "Description",
     "model": "Model",
     "systemPrompt": "System Prompt",
-    "systemPromptPlaceholder": "Define how your agent should behave...",
-    "customizeIcon": "Click to customize agent icon"
+    "systemPromptPlaceholder": "Define how your Worker should behave...",
+    "customizeIcon": "Click to customize Worker icon"
   },
   "home": {
     "heroPlaceholder": "Describe the task you want your Worker to complete..."
@@ -530,7 +530,7 @@
         "aiModelUsage": {
           "title": "AI Model Usage",
           "description": "The primary driver of credit consumption",
-          "content": "Different AI models have different costs based on their capabilities and token usage. Credits are consumed for input tokens (your prompts and context), output tokens (agent responses), and vary by model tier (Claude, GPT, etc.)."
+          "content": "Different AI models have different costs based on their capabilities and token usage. Credits are consumed for input tokens (your prompts and context), output tokens (Worker responses), and vary by model tier (Claude, GPT, etc.)."
         },
         "pricingModel": {
           "title": "Pricing Model",
@@ -743,8 +743,8 @@
     "analyzeSheet": "Analyzing Sheet",
     "visualizeSheet": "Visualizing Sheet",
     "formatSheet": "Formatting Sheet",
-    "updateAgent": "Updating Agent",
-    "getCurrentAgentConfig": "Getting Agent Config",
+    "updateAgent": "Updating Worker",
+    "getCurrentAgentConfig": "Getting Worker Config",
     "searchMcpServers": "Searching MCP Servers",
     "getMcpServerTools": "Getting MCP Server Tools",
     "configureMcpServer": "Configuring MCP Server",
@@ -770,14 +770,14 @@
     "discoverUserMcpServers": "Discovering tools",
     "createCredentialProfile": "Creating profile",
     "getCredentialProfiles": "Getting profiles",
-    "configureProfileForAgent": "Adding tools to agent",
-    "createNewAgent": "Creating New Agent",
+    "configureProfileForAgent": "Adding tools to Worker",
+    "createNewAgent": "Creating New Worker",
     "searchMcpServersForAgent": "Searching MCP Servers",
     "createCredentialProfileForAgent": "Creating Credential Profile",
     "discoverMcpToolsForAgent": "Discovering MCP Tools",
-    "configureAgentIntegration": "Configuring Agent Integration",
+    "configureAgentIntegration": "Configuring Worker Integration",
     "createAgentScheduledTrigger": "Creating Scheduled Trigger",
-    "listAgentScheduledTriggers": "Listing Agent Scheduled Triggers",
+    "listAgentScheduledTriggers": "Listing Worker Scheduled Triggers",
     "executingTool": "Executing tool",
     "toolExecutedSuccessfully": "Tool executed successfully",
     "toolExecutionFailed": "Tool execution failed",
@@ -793,26 +793,26 @@
   "agentRunLimit": {
     "gotIt": "Got it",
     "parallelRunsLimitReached": "Parallel Runs Limit Reached",
-    "parallelRunsLimitDescription": "You've reached the maximum parallel agent runs allowed.",
+    "parallelRunsLimitDescription": "You've reached the maximum parallel Worker runs allowed.",
     "needMoreParallelRuns": "Need more parallel runs?",
-    "upgradeDescription": "Upgrade your plan to run multiple agents simultaneously and boost your productivity.",
+    "upgradeDescription": "Upgrade your plan to run multiple Workers simultaneously and boost your productivity.",
     "upgradePlan": "Upgrade Plan",
-    "currentlyRunningAgents": "Currently Running Agents",
+    "currentlyRunningAgents": "Currently Running Workers",
     "loadingThreads": "Loading threads...",
-    "foundRunningAgents": "Found {count} running agents but unable to load thread details.",
+    "foundRunningAgents": "Found {count} running Workers but unable to load thread details.",
     "threadIds": "Thread IDs: {ids}",
     "moreRunning": "+{count} more running",
     "whatCanYouDo": "What can you do?",
-    "stopAgentsHint": "Click the stop button to stop running agents",
-    "waitForCompletion": "Wait for an agent to complete automatically",
+    "stopAgentsHint": "Click the stop button to stop running Workers",
+    "waitForCompletion": "Wait for a Worker to complete automatically",
     "upgradeYourPlan": "Upgrade your plan",
     "forMoreParallelRuns": "for more parallel runs",
-    "stopAgent": "Stop agent",
-    "stopThisAgent": "Stop this agent",
+    "stopAgent": "Stop Worker",
+    "stopThisAgent": "Stop this Worker",
     "openThread": "Open thread",
-    "agentStoppedSuccessfully": "Agent stopped successfully",
-    "failedToStopAgent": "Failed to stop agent",
-    "upgradeToRunMore": "Upgrade to run more agents in parallel"
+    "agentStoppedSuccessfully": "Worker stopped successfully",
+    "failedToStopAgent": "Failed to stop Worker",
+    "upgradeToRunMore": "Upgrade to run more Workers in parallel"
   },
   "errors": {
     "generic": "An error occurred",
