--- a/frontend/translations/es.json
+++ b/frontend/translations/es.json
@@ -196,12 +196,12 @@
     "search": "Buscar",
     "scheduledTrigger": "Trigger Programado",
     "eventBasedTrigger": "Trigger Basado en Evento",
-    "chooseAgent": "Elegir Agente",
+    "chooseAgent": "Elegir Worker",
     "schedule": "Programar",
-    "agentInstructions": "Instrucciones del Agente",
-    "agentInstructionsDescription": "Prompt personalizado para el agente",
-    "assignedAgent": "Agente Asignado",
-    "unknownAgent": "Agente Desconocido",
+    "agentInstructions": "Instrucciones del Worker",
+    "agentInstructionsDescription": "Prompt personalizado para el Worker",
+    "assignedAgent": "Worker Asignado",
+    "unknownAgent": "Worker Desconocido",
     "technicalDetails": "Detalles Técnicos",
     "type": "Tipo",
     "provider": "Proveedor",
@@ -218,7 +218,7 @@
     "deleteTaskFailed": "Error al eliminar tarea",
     "taskUpdatedSuccess": "Tarea actualizada correctamente",
     "updateTaskFailed": "Error al actualizar tarea",
-    "pleaseSelectAgent": "Por favor selecciona un agente",
+    "pleaseSelectAgent": "Por favor selecciona un Worker",
     "defaultScheduledTriggerName": "Trigger Programado",
     "defaultScheduledTriggerDescription": "Trigger programado automáticamente",
     "scheduleTriggerUpdated": "Trigger programado actualizado correctamente",
@@ -250,11 +250,11 @@
     "new": "Nuevo",
     "upgrade": "Mejorar",
     "chats": "Chats",
-    "agents": "Agentes",
+    "agents": "Workers",
     "workers": "Workers",
     "triggers": "Triggers",
     "newChat": "Nuevo Chat",
-    "newAgent": "Nuevo Agente",
+    "newAgent": "Nuevo Worker",
     "settings": "Ajustes",
     "logout": "Cerrar sesión",
     "openMenu": "Abrir menú",
@@ -314,7 +314,7 @@
     "scheduledTriggers": "Triggers Programados",
     "appTriggers": "Triggers de App",
     "limitsExceeded": "Has alcanzado tu límite de chats. Mejora tu plan para crear más chats.",
-    "agentInitiatedSuccessfully": "Agente iniciado correctamente",
+    "agentInitiatedSuccessfully": "Worker iniciado correctamente",
     "aiAssistantReady": "Tu asistente de IA está listo para ayudar",
     "greetings": {
       "morning": [
@@ -394,17 +394,17 @@
     "feedbackSubmitFailed": "Error al enviar el comentario"
   },
   "agents": {
-    "title": "Agentes",
-    "create": "Crear Agente",
+    "title": "Workers",
+    "create": "Crear Worker",
     "createNewWorker": "Crear Nuevo Worker",
-    "edit": "Editar Agente",
-    "delete": "Eliminar Agente",
+    "edit": "Editar Worker",
+    "delete": "Eliminar Worker",
     "name": "Nombre",
     "description": "Descripción",
     "model": "Modelo",
     "systemPrompt": "Prompt del Sistema",
-    "systemPromptPlaceholder": "Define cómo debe comportarse tu agente...",
-    "customizeIcon": "Haz clic para personalizar el icono del agente"
+    "systemPromptPlaceholder": "Define cómo debe comportarse tu Worker...",
+    "customizeIcon": "Haz clic para personalizar el icono del Worker"
   },
   "home": {
     "heroPlaceholder": "Describe la tarea que quieres que tu Worker complete..."
@@ -795,24 +795,24 @@
     "parallelRunsLimitReached": "Límite de Ejecuciones Paralelas Alcanzado",
     "parallelRunsLimitDescription": "Has alcanzado el máximo de ejecuciones paralelas de agentes permitidas.",
     "needMoreParallelRuns": "¿Necesitas más ejecuciones paralelas?",
-    "upgradeDescription": "Mejora tu plan para ejecutar múltiples agentes simultáneamente y aumentar tu productividad.",
+    "upgradeDescription": "Mejora tu plan para ejecutar múltiples Workers simultáneamente y aumentar tu productividad.",
     "upgradePlan": "Mejorar Plan",
-    "currentlyRunningAgents": "Agentes Actualmente Ejecutando",
+    "currentlyRunningAgents": "Workers Actualmente Ejecutando",
     "loadingThreads": "Cargando hilos...",
-    "foundRunningAgents": "Encontrados {count} agentes ejecutando pero no se pudieron cargar los detalles del hilo.",
+    "foundRunningAgents": "Encontrados {count} Workers ejecutando pero no se pudieron cargar los detalles del hilo.",
     "threadIds": "IDs de Hilo: {ids}",
     "moreRunning": "+{count} ejecutando",
     "whatCanYouDo": "¿Qué puedes hacer?",
-    "stopAgentsHint": "Haz clic en el botón detener para detener agentes ejecutando",
-    "waitForCompletion": "Espera a que un agente se complete automáticamente",
+    "stopAgentsHint": "Haz clic en el botón detener para detener Workers ejecutando",
+    "waitForCompletion": "Espera a que un Worker se complete automáticamente",
     "upgradeYourPlan": "Mejora tu plan",
     "forMoreParallelRuns": "para más ejecuciones paralelas",
-    "stopAgent": "Detener agente",
-    "stopThisAgent": "Detener este agente",
+    "stopAgent": "Detener Worker",
+    "stopThisAgent": "Detener este Worker",
     "openThread": "Abrir hilo",
-    "agentStoppedSuccessfully": "Agente detenido correctamente",
-    "failedToStopAgent": "Error al detener agente",
-    "upgradeToRunMore": "Mejora para ejecutar más agentes en paralelo"
+    "agentStoppedSuccessfully": "Worker detenido correctamente",
+    "failedToStopAgent": "Error al detener Worker",
+    "upgradeToRunMore": "Mejora para ejecutar más Workers en paralelo"
   },
   "errors": {
     "generic": "Ocurrió un error",
