--- a/frontend/translations/fr.json
+++ b/frontend/translations/fr.json
@@ -196,12 +196,12 @@
     "search": "Rechercher",
     "scheduledTrigger": "Trigger Programmée",
     "eventBasedTrigger": "Trigger Basé sur Événement",
-    "chooseAgent": "Choisir un Agent",
+    "chooseAgent": "Choisir un Worker",
     "schedule": "Programmer",
-    "agentInstructions": "Instructions de l'Agent",
-    "agentInstructionsDescription": "Prompt personnalisé pour l'agent",
-    "assignedAgent": "Agent Assigné",
-    "unknownAgent": "Agent Inconnu",
+    "agentInstructions": "Instructions du Worker",
+    "agentInstructionsDescription": "Prompt personnalisé pour le Worker",
+    "assignedAgent": "Worker Assigné",
+    "unknownAgent": "Worker Inconnu",
     "technicalDetails": "Détails Techniques",
     "type": "Type",
     "provider": "Fournisseur",
@@ -218,7 +218,7 @@
     "deleteTaskFailed": "Échec de la suppression de la tâche",
     "taskUpdatedSuccess": "Tâche mise à jour avec succès",
     "updateTaskFailed": "Échec de la mise à jour de la tâche",
-    "pleaseSelectAgent": "Merci de sélectionner un agent",
+    "pleaseSelectAgent": "Merci de sélectionner un Worker",
     "defaultScheduledTriggerName": "Trigger Programmée",
     "defaultScheduledTriggerDescription": "Trigger programmée automatiquement",
     "scheduleTriggerUpdated": "Trigger programmée mise à jour avec succès",
@@ -250,11 +250,11 @@
     "new": "Nouveau",
     "upgrade": "Améliorer",
     "chats": "Chats",
-    "agents": "Agents",
+    "agents": "Workers",
     "workers": "Workers",
     "triggers": "Triggers",
     "newChat": "Nouveau Chat",
-    "newAgent": "Nouvel Agent",
+    "newAgent": "Nouveau Worker",
     "settings": "Paramètres",
     "logout": "Déconnexion",
     "openMenu": "Ouvrir le menu",
@@ -373,7 +373,7 @@
     "instructions": "Instructions",
     "knowledge": "Connaissances",
     "triggers": "Triggers",
-    "agents": "Agents",
+    "agents": "Workers",
     "superWorker": "Super Worker",
     "searchWorkers": "Rechercher workers...",
     "myWorkers": "Mes Workers",
@@ -394,17 +394,17 @@
     "feedbackSubmitFailed": "Échec de l'envoi du commentaire"
   },
   "agents": {
-    "title": "Agents",
-    "create": "Créer un Agent",
+    "title": "Workers",
+    "create": "Créer un Worker",
     "createNewWorker": "Créer un Nouveau Worker",
-    "edit": "Modifier l'Agent",
-    "delete": "Supprimer l'Agent",
+    "edit": "Modifier le Worker",
+    "delete": "Supprimer le Worker",
     "name": "Nom",
     "description": "Description",
     "model": "Modèle",
     "systemPrompt": "Prompt Système",
-    "systemPromptPlaceholder": "Définis comment ton agent doit se comporter...",
-    "customizeIcon": "Clique pour personnaliser l'icône de l'agent"
+    "systemPromptPlaceholder": "Définis comment ton Worker doit se comporter...",
+    "customizeIcon": "Clique pour personnaliser l'icône du Worker"
   },
   "home": {
     "heroPlaceholder": "Décris la tâche que tu veux que ton Worker accomplisse..."
@@ -797,22 +797,22 @@
     "needMoreParallelRuns": "Besoin de plus d'exécutions parallèles?",
     "upgradeDescription": "Améliore ton plan pour exécuter plusieurs agents simultanément et booster ta productivité.",
     "upgradePlan": "Améliorer le Plan",
-    "currentlyRunningAgents": "Agents Actuellement en Cours",
+    "currentlyRunningAgents": "Workers Actuellement en Cours",
     "loadingThreads": "Chargement des fils...",
-    "foundRunningAgents": "Trouvé {count} agents en cours mais impossible de charger les détails du fil.",
+    "foundRunningAgents": "Trouvé {count} Workers en cours mais impossible de charger les détails du fil.",
     "threadIds": "IDs de Fil: {ids}",
     "moreRunning": "+{count} en cours",
     "whatCanYouDo": "Que peux-tu faire?",
-    "stopAgentsHint": "Clique sur le bouton arrêter pour arrêter les agents en cours",
-    "waitForCompletion": "Attends qu'un agent se termine automatiquement",
+    "stopAgentsHint": "Clique sur le bouton arrêter pour arrêter les Workers en cours",
+    "waitForCompletion": "Attends qu'un Worker se termine automatiquement",
     "upgradeYourPlan": "Améliore ton plan",
     "forMoreParallelRuns": "pour plus d'exécutions parallèles",
-    "stopAgent": "Arrêter l'agent",
-    "stopThisAgent": "Arrêter cet agent",
+    "stopAgent": "Arrêter le Worker",
+    "stopThisAgent": "Arrêter ce Worker",
     "openThread": "Ouvrir le fil",
-    "agentStoppedSuccessfully": "Agent arrêté avec succès",
-    "failedToStopAgent": "Échec de l'arrêt de l'agent",
-    "upgradeToRunMore": "Améliore pour exécuter plus d'agents en parallèle"
+    "agentStoppedSuccessfully": "Worker arrêté avec succès",
+    "failedToStopAgent": "Échec de l'arrêt du Worker",
+    "upgradeToRunMore": "Améliore pour exécuter plus de Workers en parallèle"
   },
   "errors": {
     "generic": "Une erreur s'est produite",
