--- a/frontend/translations/it.json
+++ b/frontend/translations/it.json
@@ -196,12 +196,12 @@
     "search": "Cerca",
     "scheduledTrigger": "Trigger programmato",
     "eventBasedTrigger": "Trigger basato su eventi",
-    "chooseAgent": "Scegli un agente",
+    "chooseAgent": "Scegli un worker",
     "schedule": "Programma",
-    "agentInstructions": "Istruzioni agente",
-    "agentInstructionsDescription": "Prompt personalizzato per l'agente",
-    "assignedAgent": "Agente assegnato",
-    "unknownAgent": "Agente sconosciuto",
+    "agentInstructions": "Istruzioni worker",
+    "agentInstructionsDescription": "Prompt personalizzato per il worker",
+    "assignedAgent": "Worker assegnato",
+    "unknownAgent": "Worker sconosciuto",
     "technicalDetails": "Dettagli tecnici",
     "type": "Tipo",
     "provider": "Fornitore",
@@ -231,8 +231,8 @@
     "createScheduledTask": "Crea attività programmata",
     "editAppBasedTask": "Modifica attività basata su app",
     "createAppBasedTask": "Crea attività basata su app",
-    "updateAgentForTask": "Aggiorna l'agente per questa attività",
-    "selectAgentForTask": "Prima, seleziona quale agente dovrebbe gestire questa attività",
+    "updateAgentForTask": "Aggiorna il worker per questa attività",
+    "selectAgentForTask": "Prima, seleziona quale worker dovrebbe gestire questa attività",
     "createNew": "Crea nuovo",
     "notConfigured": "Non configurato",
     "every15Minutes": "Ogni 15 minuti",
@@ -250,11 +250,11 @@
     "new": "Nuovo",
     "upgrade": "Aggiorna",
     "chats": "Chat",
-    "agents": "Agenti",
+    "agents": "Workers",
     "workers": "Worker",
     "triggers": "Trigger",
     "newChat": "Nuova chat",
-    "newAgent": "Nuovo agente",
+    "newAgent": "Nuovo worker",
     "settings": "Impostazioni",
     "logout": "Esci",
     "openMenu": "Apri menu",
@@ -395,17 +395,17 @@
     "feedbackSubmitFailed": "Invio del feedback fallito"
   },
   "agents": {
-    "title": "Agenti",
-    "create": "Crea agente",
+    "title": "Workers",
+    "create": "Crea worker",
     "createNewWorker": "Crea nuovo worker",
-    "edit": "Modifica agente",
-    "delete": "Elimina agente",
+    "edit": "Modifica worker",
+    "delete": "Elimina worker",
     "name": "Nome",
     "description": "Descrizione",
     "model": "Modello",
     "systemPrompt": "Prompt di sistema",
-    "systemPromptPlaceholder": "Definisci come dovrebbe comportarsi il tuo agente...",
-    "customizeIcon": "Clicca per personalizzare l'icona dell'agente"
+    "systemPromptPlaceholder": "Definisci come dovrebbe comportarsi il tuo worker...",
+    "customizeIcon": "Clicca per personalizzare l'icona del worker"
   },
   "home": {
     "title": "Benvenuto",
@@ -798,24 +798,24 @@
     "parallelRunsLimitReached": "Limite esecuzioni parallele raggiunto",
     "parallelRunsLimitDescription": "Hai raggiunto il numero massimo di esecuzioni parallele di agenti consentite.",
     "needMoreParallelRuns": "Hai bisogno di più esecuzioni parallele?",
-    "upgradeDescription": "Aggiorna il tuo piano per eseguire più agenti contemporaneamente e aumentare la tua produttività.",
+    "upgradeDescription": "Aggiorna il tuo piano per eseguire più workers contemporaneamente e aumentare la tua produttività.",
     "upgradePlan": "Aggiorna piano",
-    "currentlyRunningAgents": "Agenti attualmente in esecuzione",
+    "currentlyRunningAgents": "Workers attualmente in esecuzione",
     "loadingThreads": "Caricamento thread...",
-    "foundRunningAgents": "Trovati {count} agenti in esecuzione ma impossibile caricare i dettagli del thread.",
+    "foundRunningAgents": "Trovati {count} workers in esecuzione ma impossibile caricare i dettagli del thread.",
     "threadIds": "ID thread: {ids}",
     "moreRunning": "+{count} altri in esecuzione",
     "whatCanYouDo": "Cosa puoi fare?",
-    "stopAgentsHint": "Clicca il pulsante di stop per fermare gli agenti in esecuzione",
-    "waitForCompletion": "Attendi che un agente si completi automaticamente",
+    "stopAgentsHint": "Clicca il pulsante di stop per fermare i workers in esecuzione",
+    "waitForCompletion": "Attendi che un worker si completi automaticamente",
     "upgradeYourPlan": "Aggiorna il tuo piano",
     "forMoreParallelRuns": "per più esecuzioni parallele",
-    "stopAgent": "Ferma agente",
-    "stopThisAgent": "Ferma questo agente",
+    "stopAgent": "Ferma worker",
+    "stopThisAgent": "Ferma questo worker",
     "openThread": "Apri thread",
-    "agentStoppedSuccessfully": "Agente fermato con successo",
-    "failedToStopAgent": "Impossibile fermare l'agente",
-    "upgradeToRunMore": "Aggiorna per eseguire più agenti in parallelo"
+    "agentStoppedSuccessfully": "Worker fermato con successo",
+    "failedToStopAgent": "Impossibile fermare il worker",
+    "upgradeToRunMore": "Aggiorna per eseguire più workers in parallelo"
   },
   "errors": {
     "generic": "Si è verificato un errore",
