--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -78,7 +78,7 @@
         "dialogTitle": "アカウント削除",
         "warning": "この操作は30日後には元に戻せません",
         "whenDelete": "アカウントを削除すると：",
-        "agentsDeleted": "すべてのエージェントとエージェントバージョンが削除されます",
+        "agentsDeleted": "すべてのワーカーとワーカーバージョンが削除されます",
         "threadsDeleted": "すべてのスレッドと会話が削除されます",
         "credentialsRemoved": "すべての認証情報と統合が削除されます",
         "subscriptionCancelled": "サブスクリプションがキャンセルされます",
@@ -196,12 +196,12 @@
     "search": "検索",
     "scheduledTrigger": "スケジュールトリガー",
     "eventBasedTrigger": "イベントベースのトリガー",
-    "chooseAgent": "エージェントを選択",
+    "chooseAgent": "ワーカーを選択",
     "schedule": "スケジュール",
-    "agentInstructions": "エージェントの指示",
-    "agentInstructionsDescription": "エージェント用のカスタムプロンプト",
-    "assignedAgent": "割り当てられたエージェント",
-    "unknownAgent": "不明なエージェント",
+    "agentInstructions": "ワーカーの指示",
+    "agentInstructionsDescription": "ワーカー用のカスタムプロンプト",
+    "assignedAgent": "割り当てられたワーカー",
+    "unknownAgent": "不明なワーカー",
     "technicalDetails": "技術詳細",
     "type": "タイプ",
     "provider": "プロバイダー",
@@ -218,7 +218,7 @@
     "deleteTaskFailed": "タスクの削除に失敗しました",
     "taskUpdatedSuccess": "タスクが正常に更新されました",
     "updateTaskFailed": "タスクの更新に失敗しました",
-    "pleaseSelectAgent": "エージェントを選択してください",
+    "pleaseSelectAgent": "ワーカーを選択してください",
     "defaultScheduledTriggerName": "スケジュールトリガー",
     "defaultScheduledTriggerDescription": "自動スケジュールトリガー",
     "scheduleTriggerUpdated": "スケジュールトリガーが正常に更新されました",
@@ -231,8 +231,8 @@
     "createScheduledTask": "スケジュールタスクを作成",
     "editAppBasedTask": "アプリベースのタスクを編集",
     "createAppBasedTask": "アプリベースのタスクを作成",
-    "updateAgentForTask": "このタスクのエージェントを更新",
-    "selectAgentForTask": "まず、このタスクを処理するエージェントを選択",
+    "updateAgentForTask": "このタスクのワーカーを更新",
+    "selectAgentForTask": "まず、このタスクを処理するワーカーを選択",
     "createNew": "新規作成",
     "notConfigured": "未設定",
     "every15Minutes": "15分ごと",
@@ -250,11 +250,11 @@
     "new": "新規",
     "upgrade": "アップグレード",
     "chats": "チャット",
-    "agents": "エージェント",
+    "agents": "ワーカー",
     "workers": "ワーカー",
     "triggers": "トリガー",
     "newChat": "新しいチャット",
-    "newAgent": "新しいエージェント",
+    "newAgent": "新しいワーカー",
     "settings": "設定",
     "logout": "ログアウト",
     "openMenu": "メニューを開く",
@@ -373,7 +373,7 @@
     "instructions": "指示",
     "knowledge": "知識",
     "triggers": "トリガー",
-    "agents": "エージェント",
+    "agents": "ワーカー",
     "superWorker": "Super Worker",
     "searchWorkers": "Workerを検索...",
     "myWorkers": "マイWorkers",
@@ -394,17 +394,17 @@
     "feedbackSubmitFailed": "フィードバックの送信に失敗しました"
   },
   "agents": {
-    "title": "エージェント",
-    "create": "エージェントを作成",
+    "title": "ワーカー",
+    "create": "ワーカーを作成",
     "createNewWorker": "新しいWorkerを作成",
-    "edit": "エージェントを編集",
-    "delete": "エージェントを削除",
+    "edit": "ワーカーを編集",
+    "delete": "ワーカーを削除",
     "name": "名前",
     "description": "説明",
     "model": "モデル",
     "systemPrompt": "システムプロンプト",
-    "systemPromptPlaceholder": "エージェントの動作を定義...",
-    "customizeIcon": "エージェントアイコンをカスタマイズするにはクリック"
+    "systemPromptPlaceholder": "ワーカーの動作を定義...",
+    "customizeIcon": "ワーカーアイコンをカスタマイズするにはクリック"
   },
   "home": {
     "heroPlaceholder": "Workerに完了させたいタスクを説明..."
@@ -522,7 +522,7 @@
       "subtitle": "Kortixでのクレジットの仕組みについて知っておくべきすべて",
       "understandingCredits": {
         "title": "クレジットの理解",
-        "description": "クレジットは、Kortixのプラットフォーム操作における共通通貨として機能します。AIエージェントが実行するすべてのアクション（データ分析からコード生成まで）は、タスクの複雑さと必要なリソースに基づいてクレジットを消費します。"
+        "description": "クレジットは、Kortixのプラットフォーム操作における共通通貨として機能します。AIワーカーが実行するすべてのアクション（データ分析からコード生成まで）は、タスクの複雑さと必要なリソースに基づいてクレジットを消費します。"
       },
       "howCreditsWork": {
         "title": "クレジットの仕組み",
@@ -530,7 +530,7 @@
         "aiModelUsage": {
           "title": "AIモデルの使用",
           "description": "クレジット消費の主要な要因",
-          "content": "異なるAIモデルは、その機能とトークン使用量に基づいて異なるコストがあります。クレジットは入力トークン（プロンプトとコンテキスト）、出力トークン（エージェントの応答）に消費され、モデル階層（Claude、GPTなど）によって異なります。"
+          "content": "異なるAIモデルは、その機能とトークン使用量に基づいて異なるコストがあります。クレジットは入力トークン（プロンプトとコンテキスト）、出力トークン（ワーカーの応答）に消費され、モデル階層（Claude、GPTなど）によって異なります。"
         },
         "pricingModel": {
           "title": "価格モデル",
@@ -743,8 +743,8 @@
     "analyzeSheet": "シート分析中",
     "visualizeSheet": "シート可視化中",
     "formatSheet": "シートフォーマット中",
-    "updateAgent": "エージェント更新中",
-    "getCurrentAgentConfig": "エージェント設定取得中",
+    "updateAgent": "ワーカー更新中",
+    "getCurrentAgentConfig": "ワーカー設定取得中",
     "searchMcpServers": "MCPサーバー検索中",
     "getMcpServerTools": "MCPサーバーツール取得中",
     "configureMcpServer": "MCPサーバー設定中",
@@ -770,8 +770,8 @@
     "discoverUserMcpServers": "ツール検出中",
     "createCredentialProfile": "プロファイル作成中",
     "getCredentialProfiles": "プロファイル取得中",
-    "configureProfileForAgent": "エージェントにツール追加中",
-    "createNewAgent": "新しいエージェント作成中",
+    "configureProfileForAgent": "ワーカーにツール追加中",
+    "createNewAgent": "新しいワーカー作成中",
     "searchMcpServersForAgent": "MCPサーバー検索中",
     "createCredentialProfileForAgent": "認証プロファイル作成中",
     "discoverMcpToolsForAgent": "MCPツール検出中",
@@ -795,24 +795,24 @@
     "parallelRunsLimitReached": "並列実行制限に達しました",
     "parallelRunsLimitDescription": "許可されている最大並列エージェント実行数に達しました。",
     "needMoreParallelRuns": "もっと並列実行が必要？",
-    "upgradeDescription": "プランをアップグレードして、複数のエージェントを同時に実行し、生産性を向上させよう。",
+    "upgradeDescription": "プランをアップグレードして、複数のワーカーを同時に実行し、生産性を向上させよう。",
     "upgradePlan": "プランをアップグレード",
-    "currentlyRunningAgents": "現在実行中のエージェント",
+    "currentlyRunningAgents": "現在実行中のワーカー",
     "loadingThreads": "スレッドを読み込み中...",
-    "foundRunningAgents": "{count} 個の実行中のエージェントが見つかりましたが、スレッドの詳細を読み込めませんでした。",
+    "foundRunningAgents": "{count} 個の実行中のワーカーが見つかりましたが、スレッドの詳細を読み込めませんでした。",
     "threadIds": "スレッドID: {ids}",
     "moreRunning": "+{count} 個が実行中",
     "whatCanYouDo": "何ができる？",
-    "stopAgentsHint": "停止ボタンをクリックして実行中のエージェントを停止",
-    "waitForCompletion": "エージェントが自動的に完了するのを待つ",
+    "stopAgentsHint": "停止ボタンをクリックして実行中のワーカーを停止",
+    "waitForCompletion": "ワーカーが自動的に完了するのを待つ",
     "upgradeYourPlan": "プランをアップグレード",
     "forMoreParallelRuns": "より多くの並列実行のために",
-    "stopAgent": "エージェントを停止",
-    "stopThisAgent": "このエージェントを停止",
+    "stopAgent": "ワーカーを停止",
+    "stopThisAgent": "このワーカーを停止",
     "openThread": "スレッドを開く",
-    "agentStoppedSuccessfully": "エージェントが正常に停止されました",
-    "failedToStopAgent": "エージェントの停止に失敗しました",
-    "upgradeToRunMore": "より多くのエージェントを並列実行するためにアップグレード"
+    "agentStoppedSuccessfully": "ワーカーが正常に停止されました",
+    "failedToStopAgent": "ワーカーの停止に失敗しました",
+    "upgradeToRunMore": "より多くのワーカーを並列実行するためにアップグレード"
   },
   "errors": {
     "generic": "エラーが発生しました",
