--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -196,12 +196,12 @@
     "search": "Buscar",
     "scheduledTrigger": "Trigger Agendado",
     "eventBasedTrigger": "Trigger Baseado em Evento",
-    "chooseAgent": "Escolher Agente",
+    "chooseAgent": "Escolher Worker",
     "schedule": "Agendar",
-    "agentInstructions": "Instruções do Agente",
-    "agentInstructionsDescription": "Prompt personalizado para o agente",
-    "assignedAgent": "Agente Atribuído",
-    "unknownAgent": "Agente Desconhecido",
+    "agentInstructions": "Instruções do Worker",
+    "agentInstructionsDescription": "Prompt personalizado para o Worker",
+    "assignedAgent": "Worker Atribuído",
+    "unknownAgent": "Worker Desconhecido",
     "technicalDetails": "Detalhes Técnicos",
     "type": "Tipo",
     "provider": "Provedor",
@@ -218,7 +218,7 @@
     "deleteTaskFailed": "Falha ao excluir tarefa",
     "taskUpdatedSuccess": "Tarefa atualizada com sucesso",
     "updateTaskFailed": "Falha ao atualizar tarefa",
-    "pleaseSelectAgent": "Por favor seleciona um agente",
+    "pleaseSelectAgent": "Por favor seleciona um Worker",
     "defaultScheduledTriggerName": "Trigger Agendado",
     "defaultScheduledTriggerDescription": "Trigger agendado automaticamente",
     "scheduleTriggerUpdated": "Trigger agendado atualizado com sucesso",
@@ -231,8 +231,8 @@
     "createScheduledTask": "Criar Tarefa Agendada",
     "editAppBasedTask": "Editar Tarefa Baseada em App",
     "createAppBasedTask": "Criar Tarefa Baseada em App",
-    "updateAgentForTask": "Atualizar o agente para esta tarefa",
-    "selectAgentForTask": "Primeiro, seleciona qual agente deve lidar com esta tarefa",
+    "updateAgentForTask": "Atualizar o Worker para esta tarefa",
+    "selectAgentForTask": "Primeiro, seleciona qual Worker deve lidar com esta tarefa",
     "createNew": "Criar novo",
     "notConfigured": "Não configurado",
     "every15Minutes": "A cada 15 minutos",
@@ -250,7 +250,7 @@
     "new": "Novo",
     "upgrade": "Melhorar",
     "chats": "Chats",
-    "agents": "Agentes",
+    "agents": "Workers",
     "workers": "Workers",
     "triggers": "Triggers",
     "newChat": "Novo Chat",
@@ -314,7 +314,7 @@
     "scheduledTriggers": "Triggers Agendados",
     "appTriggers": "Triggers de App",
     "limitsExceeded": "Atingiste teu limite de chats. Melhora teu plano para criar mais chats.",
-    "agentInitiatedSuccessfully": "Agente iniciado com sucesso",
+    "agentInitiatedSuccessfully": "Worker iniciado com sucesso",
     "aiAssistantReady": "Teu assistente de IA está pronto para ajudar",
     "greetings": {
       "morning": [
@@ -373,7 +373,7 @@
     "instructions": "Instruções",
     "knowledge": "Conhecimento",
     "triggers": "Triggers",
-    "agents": "Agentes",
+    "agents": "Workers",
     "superWorker": "Super Worker",
     "searchWorkers": "Buscar workers...",
     "myWorkers": "Meus Workers",
@@ -394,17 +394,17 @@
     "feedbackSubmitFailed": "Falha ao enviar feedback"
   },
   "agents": {
-    "title": "Agentes",
-    "create": "Criar Agente",
+    "title": "Workers",
+    "create": "Criar Worker",
     "createNewWorker": "Criar Novo Worker",
-    "edit": "Editar Agente",
-    "delete": "Excluir Agente",
+    "edit": "Editar Worker",
+    "delete": "Excluir Worker",
     "name": "Nome",
     "description": "Descrição",
     "model": "Modelo",
     "systemPrompt": "Prompt do Sistema",
-    "systemPromptPlaceholder": "Define como teu agente deve se comportar...",
-    "customizeIcon": "Clica para personalizar ícone do agente"
+    "systemPromptPlaceholder": "Define como teu Worker deve se comportar...",
+    "customizeIcon": "Clica para personalizar ícone do Worker"
   },
   "home": {
     "heroPlaceholder": "Descreve a tarefa que queres que teu Worker complete..."
@@ -795,24 +795,24 @@
     "parallelRunsLimitReached": "Limite de Execuções Paralelas Atingido",
     "parallelRunsLimitDescription": "Atingiste o máximo de execuções paralelas de agentes permitidas.",
     "needMoreParallelRuns": "Precisas de mais execuções paralelas?",
-    "upgradeDescription": "Melhora teu plano para executar múltiplos agentes simultaneamente e aumentar tua produtividade.",
+    "upgradeDescription": "Melhora teu plano para executar múltiplos Workers simultaneamente e aumentar tua produtividade.",
     "upgradePlan": "Melhorar Plano",
-    "currentlyRunningAgents": "Agentes Atualmente Executando",
+    "currentlyRunningAgents": "Workers Atualmente Executando",
     "loadingThreads": "Carregando threads...",
-    "foundRunningAgents": "Encontrados {count} agentes executando mas incapaz de carregar detalhes da thread.",
+    "foundRunningAgents": "Encontrados {count} Workers executando mas incapaz de carregar detalhes da thread.",
     "threadIds": "IDs de Thread: {ids}",
     "moreRunning": "+{count} executando",
     "whatCanYouDo": "O que podes fazer?",
-    "stopAgentsHint": "Clica no botão parar para parar agentes executando",
-    "waitForCompletion": "Espera um agente completar automaticamente",
+    "stopAgentsHint": "Clica no botão parar para parar Workers executando",
+    "waitForCompletion": "Espera um Worker completar automaticamente",
     "upgradeYourPlan": "Melhora teu plano",
     "forMoreParallelRuns": "para mais execuções paralelas",
-    "stopAgent": "Parar agente",
-    "stopThisAgent": "Parar este agente",
+    "stopAgent": "Parar Worker",
+    "stopThisAgent": "Parar este Worker",
     "openThread": "Abrir thread",
-    "agentStoppedSuccessfully": "Agente parado com sucesso",
-    "failedToStopAgent": "Falha ao parar agente",
-    "upgradeToRunMore": "Melhora para executar mais agentes em paralelo"
+    "agentStoppedSuccessfully": "Worker parado com sucesso",
+    "failedToStopAgent": "Falha ao parar Worker",
+    "upgradeToRunMore": "Melhora para executar mais Workers em paralelo"
   },
   "errors": {
     "generic": "Ocorreu um erro",
