--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -78,7 +78,7 @@
         "dialogTitle": "删除账户",
         "warning": "此操作在30天后无法撤销",
         "whenDelete": "当你删除账户时：",
-        "agentsDeleted": "你的所有智能体和智能体版本将被删除",
+        "agentsDeleted": "你的所有 Workers 和 Worker 版本将被删除",
         "threadsDeleted": "你的所有线程和对话将被删除",
         "credentialsRemoved": "你的所有凭据和集成将被移除",
         "subscriptionCancelled": "你的订阅将被取消",
@@ -196,12 +196,12 @@
     "search": "搜索",
     "scheduledTrigger": "计划触发器",
     "eventBasedTrigger": "基于事件的触发器",
-    "chooseAgent": "选择智能体",
+    "chooseAgent": "选择 Worker",
     "schedule": "计划",
-    "agentInstructions": "智能体说明",
-    "agentInstructionsDescription": "智能体的自定义提示",
-    "assignedAgent": "已分配的智能体",
-    "unknownAgent": "未知智能体",
+    "agentInstructions": "Worker 说明",
+    "agentInstructionsDescription": "Worker 的自定义提示",
+    "assignedAgent": "已分配的 Worker",
+    "unknownAgent": "未知 Worker",
     "technicalDetails": "技术详情",
     "type": "类型",
     "provider": "提供商",
@@ -231,8 +231,8 @@
     "createScheduledTask": "创建计划任务",
     "editAppBasedTask": "编辑基于应用的任务",
     "createAppBasedTask": "创建基于应用的任务",
-    "updateAgentForTask": "更新此任务的智能体",
-    "selectAgentForTask": "首先，选择哪个智能体应该处理此任务",
+    "updateAgentForTask": "更新此任务的 Worker",
+    "selectAgentForTask": "首先，选择哪个 Worker 应该处理此任务",
     "createNew": "新建",
     "notConfigured": "未配置",
     "every15Minutes": "每15分钟",
@@ -254,7 +254,7 @@
     "workers": "工作器",
     "triggers": "触发器",
     "newChat": "新聊天",
-    "newAgent": "新智能体",
+    "newAgent": "新 Worker",
     "settings": "设置",
     "logout": "退出登录",
     "openMenu": "打开菜单",
@@ -394,17 +394,17 @@
     "feedbackSubmitFailed": "反馈提交失败"
   },
   "agents": {
-    "title": "智能体",
-    "create": "创建智能体",
+    "title": "Workers",
+    "create": "创建 Worker",
     "createNewWorker": "创建新 Worker",
-    "edit": "编辑智能体",
-    "delete": "删除智能体",
+    "edit": "编辑 Worker",
+    "delete": "删除 Worker",
     "name": "姓名",
     "description": "描述",
     "model": "模型",
     "systemPrompt": "系统提示",
-    "systemPromptPlaceholder": "定义你的智能体应该如何行为...",
-    "customizeIcon": "点击自定义智能体图标"
+    "systemPromptPlaceholder": "定义你的 Worker 应该如何行为...",
+    "customizeIcon": "点击自定义 Worker 图标"
   },
   "home": {
     "heroPlaceholder": "描述你想让你的 Worker 完成的任务..."
@@ -522,11 +522,11 @@
       "subtitle": "关于 Kortix 积分工作原理你需要知道的一切",
       "understandingCredits": {
         "title": "了解积分",
-        "description": "积分是 Kortix 平台操作的通用货币。你的 AI 智能体执行的每个操作——从分析数据到生成代码——都会根据任务的复杂性和所需资源消耗积分。"
+        "description": "积分是 Kortix 平台操作的通用货币。你的 AI Workers 执行的每个操作——从分析数据到生成代码——都会根据任务的复杂性和所需资源消耗积分。"
       },
       "howCreditsWork": {
         "title": "积分如何工作",
-        "description": "积分根据你的 AI 智能体使用的资源消耗：",
+        "description": "积分根据你的 AI Workers 使用的资源消耗：",
         "aiModelUsage": {
           "title": "AI 模型使用",
           "description": "积分消耗的主要驱动因素",
@@ -743,8 +743,8 @@
     "analyzeSheet": "正在分析表格",
     "visualizeSheet": "正在可视化表格",
     "formatSheet": "正在格式化表格",
-    "updateAgent": "正在更新智能体",
-    "getCurrentAgentConfig": "正在获取智能体配置",
+    "updateAgent": "正在更新 Worker",
+    "getCurrentAgentConfig": "正在获取 Worker 配置",
     "searchMcpServers": "正在搜索 MCP 服务器",
     "getMcpServerTools": "正在获取 MCP 服务器工具",
     "configureMcpServer": "正在配置 MCP 服务器",
@@ -770,8 +770,8 @@
     "discoverUserMcpServers": "正在发现工具",
     "createCredentialProfile": "正在创建配置文件",
     "getCredentialProfiles": "正在获取配置文件",
-    "configureProfileForAgent": "正在向智能体添加工具",
-    "createNewAgent": "正在创建新智能体",
+    "configureProfileForAgent": "正在向 Worker 添加工具",
+    "createNewAgent": "正在创建新 Worker",
     "searchMcpServersForAgent": "正在搜索 MCP 服务器",
     "createCredentialProfileForAgent": "正在创建凭据配置文件",
     "discoverMcpToolsForAgent": "正在发现 MCP 工具",
@@ -795,24 +795,24 @@
     "parallelRunsLimitReached": "已达到并行运行限制",
     "parallelRunsLimitDescription": "你已达到允许的最大并行智能体运行数。",
     "needMoreParallelRuns": "需要更多并行运行？",
-    "upgradeDescription": "升级你的计划以同时运行多个智能体并提高生产力。",
+    "upgradeDescription": "升级你的计划以同时运行多个 Workers 并提高生产力。",
     "upgradePlan": "升级计划",
-    "currentlyRunningAgents": "当前运行的智能体",
+    "currentlyRunningAgents": "当前运行的 Workers",
     "loadingThreads": "正在加载线程...",
-    "foundRunningAgents": "找到 {count} 个正在运行的智能体，但无法加载线程详情。",
+    "foundRunningAgents": "找到 {count} 个正在运行的 Workers，但无法加载线程详情。",
     "threadIds": "线程 ID: {ids}",
     "moreRunning": "+{count} 个正在运行",
     "whatCanYouDo": "你能做什么？",
-    "stopAgentsHint": "点击停止按钮以停止正在运行的智能体",
-    "waitForCompletion": "等待智能体自动完成",
+    "stopAgentsHint": "点击停止按钮以停止正在运行的 Workers",
+    "waitForCompletion": "等待 Worker 自动完成",
     "upgradeYourPlan": "升级你的计划",
     "forMoreParallelRuns": "以获得更多并行运行",
-    "stopAgent": "停止智能体",
-    "stopThisAgent": "停止此智能体",
+    "stopAgent": "停止 Worker",
+    "stopThisAgent": "停止此 Worker",
     "openThread": "打开线程",
-    "agentStoppedSuccessfully": "智能体已成功停止",
-    "failedToStopAgent": "停止智能体失败",
-    "upgradeToRunMore": "升级以并行运行更多智能体"
+    "agentStoppedSuccessfully": "Worker 已成功停止",
+    "failedToStopAgent": "停止 Worker 失败",
+    "upgradeToRunMore": "升级以并行运行更多 Workers"
   },
   "errors": {
     "generic": "发生错误",
