--- a/apps/mobile/locales/de.json
+++ b/apps/mobile/locales/de.json
@@ -721,5 +721,116 @@
       "toolsConfigured": "Benutzerdefiniertes MCP hinzugefügt",
       "toolsConfiguredMessage": "{{count}} Tools konfiguriert"
     }
+  },
+  "threadHeader": {
+    "goBack": "Zurück",
+    "openMenu": "Menü öffnen",
+    "enterTitle": "Titel eingeben",
+    "threadActions": "Thread-Aktionen",
+    "untitled": "Ohne Titel"
+  },
+  "threadActions": {
+    "title": "Thread-Aktionen",
+    "upgradeRequired": "Upgrade Erforderlich",
+    "upgradeRequiredMessage": "Thread-Freigabe ist nur in kostenpflichtigen Plänen verfügbar. Upgrade, um diese Funktion freizuschalten.",
+    "upgrade": "Upgraden",
+    "shareThread": "Thread teilen",
+    "shareThreadUpgrade": "Thread teilen (Upgrade)",
+    "availableOnPaidPlans": "In kostenpflichtigen Plänen verfügbar",
+    "createPublicLink": "Öffentlichen Link erstellen",
+    "manageFiles": "Dateien verwalten",
+    "viewManageAttachments": "Anhänge anzeigen und verwalten",
+    "deleteThread": "Thread löschen",
+    "permanentlyDelete": "Diese Unterhaltung dauerhaft löschen"
+  },
+  "triggers": {
+    "title": "Triggers",
+    "createTrigger": "Trigger erstellen",
+    "editTrigger": "Trigger bearbeiten",
+    "deleteTrigger": "Trigger löschen",
+    "updateTrigger": "Trigger aktualisieren",
+    "scheduleTrigger": "Zeitplan-Trigger",
+    "eventTrigger": "Event-Trigger",
+    "runOnSchedule": "Nach Zeitplan ausführen",
+    "fromExternalApps": "Von externen Apps",
+    "selectApplication": "Anwendung auswählen",
+    "configureTrigger": "Trigger konfigurieren",
+    "loadingTriggerConfig": "Trigger-Konfiguration wird geladen...",
+    "loadingTriggers": "Triggers werden geladen...",
+    "loadingApps": "Apps werden geladen...",
+    "loadingProfiles": "Profile werden geladen...",
+    "noTriggersAvailable": "Keine Triggers verfügbar",
+    "noAppsFound": "Keine Apps gefunden",
+    "connected": "Verbunden",
+    "notConnected": "Nicht verbunden",
+    "setupRequired": "Einrichtung erforderlich",
+    "retry": "Erneut versuchen",
+    "back": "Zurück",
+    "creating": "Wird erstellt...",
+    "updating": "Wird aktualisiert...",
+    "triggerDetails": "Trigger-Details",
+    "active": "Aktiv",
+    "inactive": "Inaktiv",
+    "noTriggersConfigured": "Keine Triggers konfiguriert",
+    "setupTriggersToAutomate": "Richten Sie Triggers ein, um diesen Worker zu automatisieren"
+  },
+  "files": {
+    "title": "Dateien",
+    "loadingFiles": "Dateien werden geladen...",
+    "failedToLoad": "Laden fehlgeschlagen",
+    "retry": "Erneut versuchen",
+    "folderEmpty": "Dieser Ordner ist leer",
+    "uploadOrCreate": "Lade Dateien hoch oder erstelle Ordner",
+    "createFolder": "Ordner erstellen",
+    "folderName": "Ordnername",
+    "cancel": "Abbrechen",
+    "create": "Erstellen"
+  },
+  "workers": {
+    "title": "Workers",
+    "instructions": {
+      "title": "System-Prompt",
+      "description": "Definiere, wie sich dein Worker verhalten soll",
+      "loading": "Anweisungen werden geladen...",
+      "saving": "Wird gespeichert...",
+      "saveChanges": "Änderungen speichern"
+    },
+    "loadingWorker": "Worker wird geladen...",
+    "core": "Kern",
+    "capabilitiesEnabled": "{{enabled}} / {{total}} Fähigkeiten aktiviert",
+    "toolConfiguration": "Tool-Konfiguration",
+    "configureToolsDescription": "Konfigurieren Sie Tools und ihre einzelnen Fähigkeiten für Ihren Agenten",
+    "toolsEnabled": "{{enabled}} / {{total}} aktiviert",
+    "loadingTools": "Tools werden geladen...",
+    "noToolsAvailable": "Keine Tools verfügbar",
+    "toolsWillAppear": "Tools werden hier angezeigt, sobald sie verfügbar sind",
+    "sunaToolsManaged": "Sunas Tools werden zentral verwaltet und können nicht bearbeitet werden.",
+    "toolsNotEditable": "Diese Tools können nicht bearbeitet werden.",
+    "cannotEditTools": "Bearbeitung nicht möglich",
+    "sunaToolsManagedAlert": "Sunas Tools werden zentral verwaltet.",
+    "savingChanges": "Speichern...",
+    "saveChanges": "Änderungen speichern"
+  },
+  "tools": {
+    "executing": "Tool wird ausgeführt",
+    "input": "Eingabe",
+    "output": "Ausgabe",
+    "noContentAvailable": "Kein Inhalt verfügbar",
+    "processing": "Verarbeitung",
+    "loading": "Laden",
+    "searching": "Suchen",
+    "completed": "Abgeschlossen",
+    "failed": "Fehlgeschlagen"
+  },
+  "composio": {
+    "noAppsFound": "Keine Apps gefunden",
+    "noAppsAvailable": "Keine Apps verfügbar",
+    "searchApps": "Apps suchen...",
+    "searchTools": "Tools suchen...",
+    "failedToLoadTools": "Laden der Tools fehlgeschlagen",
+    "retry": "Erneut versuchen",
+    "noToolsFound": "Keine Tools gefunden",
+    "saving": "Wird gespeichert...",
+    "selectTools": "Tools auswählen"
   }
 }
