--- a/apps/mobile/locales/es.json
+++ b/apps/mobile/locales/es.json
@@ -735,5 +735,116 @@
       "toolsConfigured": "MCP Personalizado Agregado",
       "toolsConfiguredMessage": "{{count}} herramientas configuradas"
     }
+  },
+  "threadHeader": {
+    "goBack": "Volver",
+    "openMenu": "Abrir menú",
+    "enterTitle": "Ingresa título",
+    "threadActions": "Acciones del hilo",
+    "untitled": "Sin título"
+  },
+  "threadActions": {
+    "title": "Acciones del Hilo",
+    "upgradeRequired": "Se Requiere Upgrade",
+    "upgradeRequiredMessage": "Compartir hilos está disponible en planes pagos. Actualiza para desbloquear esta función.",
+    "upgrade": "Actualizar",
+    "shareThread": "Compartir Hilo",
+    "shareThreadUpgrade": "Compartir Hilo (Upgrade)",
+    "availableOnPaidPlans": "Disponible en planes pagos",
+    "createPublicLink": "Crear enlace público",
+    "manageFiles": "Administrar Archivos",
+    "viewManageAttachments": "Ver y administrar adjuntos",
+    "deleteThread": "Eliminar Hilo",
+    "permanentlyDelete": "Eliminar esta conversación permanentemente"
+  },
+  "triggers": {
+    "title": "Triggers",
+    "createTrigger": "Crear Trigger",
+    "editTrigger": "Editar Trigger",
+    "deleteTrigger": "Eliminar Trigger",
+    "updateTrigger": "Actualizar Trigger",
+    "scheduleTrigger": "Trigger Programado",
+    "eventTrigger": "Trigger de Evento",
+    "runOnSchedule": "Ejecutar según horario",
+    "fromExternalApps": "Desde apps externas",
+    "selectApplication": "Seleccionar Aplicación",
+    "configureTrigger": "Configurar Trigger",
+    "loadingTriggerConfig": "Cargando configuración del trigger...",
+    "loadingTriggers": "Cargando triggers...",
+    "loadingApps": "Cargando apps...",
+    "loadingProfiles": "Cargando perfiles...",
+    "noTriggersAvailable": "No hay triggers disponibles",
+    "noAppsFound": "No se encontraron apps",
+    "connected": "Conectado",
+    "notConnected": "No conectado",
+    "setupRequired": "Configuración requerida",
+    "retry": "Reintentar",
+    "back": "Volver",
+    "creating": "Creando...",
+    "updating": "Actualizando...",
+    "triggerDetails": "Detalles del Trigger",
+    "active": "Activo",
+    "inactive": "Inactivo",
+    "noTriggersConfigured": "No hay triggers configurados",
+    "setupTriggersToAutomate": "Configura triggers para automatizar este worker"
+  },
+  "files": {
+    "title": "Archivos",
+    "loadingFiles": "Cargando archivos...",
+    "failedToLoad": "Error al cargar",
+    "retry": "Reintentar",
+    "folderEmpty": "Esta carpeta está vacía",
+    "uploadOrCreate": "Sube archivos o crea carpetas",
+    "createFolder": "Crear Carpeta",
+    "folderName": "Nombre de carpeta",
+    "cancel": "Cancelar",
+    "create": "Crear"
+  },
+  "workers": {
+    "title": "Workers",
+    "instructions": {
+      "title": "Prompt del Sistema",
+      "description": "Define cómo debe comportarse tu worker",
+      "loading": "Cargando instrucciones...",
+      "saving": "Guardando...",
+      "saveChanges": "Guardar Cambios"
+    },
+    "loadingWorker": "Cargando worker...",
+    "core": "Principal",
+    "capabilitiesEnabled": "{{enabled}} / {{total}} capacidades habilitadas",
+    "toolConfiguration": "Configuración de herramientas",
+    "configureToolsDescription": "Configura las herramientas y sus capacidades individuales para tu agente",
+    "toolsEnabled": "{{enabled}} / {{total}} habilitadas",
+    "loadingTools": "Cargando herramientas...",
+    "noToolsAvailable": "No hay herramientas disponibles",
+    "toolsWillAppear": "Las herramientas aparecerán aquí cuando estén disponibles",
+    "sunaToolsManaged": "Las herramientas de Suna se gestionan centralmente y no se pueden editar.",
+    "toolsNotEditable": "Estas herramientas no se pueden editar.",
+    "cannotEditTools": "No se puede editar",
+    "sunaToolsManagedAlert": "Las herramientas de Suna se gestionan centralmente.",
+    "savingChanges": "Guardando...",
+    "saveChanges": "Guardar cambios"
+  },
+  "tools": {
+    "executing": "Ejecutando herramienta",
+    "input": "Entrada",
+    "output": "Salida",
+    "noContentAvailable": "No hay contenido disponible",
+    "processing": "Procesando",
+    "loading": "Cargando",
+    "searching": "Buscando",
+    "completed": "Completado",
+    "failed": "Fallido"
+  },
+  "composio": {
+    "noAppsFound": "No se encontraron apps",
+    "noAppsAvailable": "No hay apps disponibles",
+    "searchApps": "Buscar apps...",
+    "searchTools": "Buscar herramientas...",
+    "failedToLoadTools": "Error al cargar herramientas",
+    "retry": "Reintentar",
+    "noToolsFound": "No se encontraron herramientas",
+    "saving": "Guardando...",
+    "selectTools": "Seleccionar Herramientas"
   }
 }
