--- a/apps/mobile/locales/pt.json
+++ b/apps/mobile/locales/pt.json
@@ -716,6 +716,117 @@
       "toolsConfigured": "MCP Personalizado Adicionado",
       "toolsConfiguredMessage": "{{count}} ferramentas configuradas"
     }
+  },
+  "threadHeader": {
+    "goBack": "Voltar",
+    "openMenu": "Abrir menu",
+    "enterTitle": "Digite o título",
+    "threadActions": "Ações da conversa",
+    "untitled": "Sem título"
+  },
+  "threadActions": {
+    "title": "Ações da Conversa",
+    "upgradeRequired": "Upgrade Necessário",
+    "upgradeRequiredMessage": "Compartilhar conversas está disponível em planos pagos. Faça upgrade para desbloquear esta funcionalidade.",
+    "upgrade": "Fazer Upgrade",
+    "shareThread": "Compartilhar Conversa",
+    "shareThreadUpgrade": "Compartilhar Conversa (Upgrade)",
+    "availableOnPaidPlans": "Disponível em planos pagos",
+    "createPublicLink": "Criar link público",
+    "manageFiles": "Gerenciar Arquivos",
+    "viewManageAttachments": "Ver e gerenciar anexos",
+    "deleteThread": "Excluir Conversa",
+    "permanentlyDelete": "Excluir permanentemente esta conversa"
+  },
+  "triggers": {
+    "title": "Triggers",
+    "createTrigger": "Criar Trigger",
+    "editTrigger": "Editar Trigger",
+    "deleteTrigger": "Excluir Trigger",
+    "updateTrigger": "Atualizar Trigger",
+    "scheduleTrigger": "Trigger Agendado",
+    "eventTrigger": "Trigger de Evento",
+    "runOnSchedule": "Executar por agendamento",
+    "fromExternalApps": "De apps externos",
+    "selectApplication": "Selecionar Aplicativo",
+    "configureTrigger": "Configurar Trigger",
+    "loadingTriggerConfig": "Carregando configuração...",
+    "loadingTriggers": "Carregando triggers...",
+    "loadingApps": "Carregando apps...",
+    "loadingProfiles": "Carregando perfis...",
+    "noTriggersAvailable": "Nenhum trigger disponível",
+    "noAppsFound": "Nenhum app encontrado",
+    "connected": "Conectado",
+    "notConnected": "Não conectado",
+    "setupRequired": "Configuração necessária",
+    "retry": "Tentar novamente",
+    "back": "Voltar",
+    "creating": "Criando...",
+    "updating": "Atualizando...",
+    "triggerDetails": "Detalhes do Trigger",
+    "active": "Ativo",
+    "inactive": "Inativo",
+    "noTriggersConfigured": "Nenhum trigger configurado",
+    "setupTriggersToAutomate": "Configure triggers para automatizar este worker"
+  },
+  "files": {
+    "title": "Arquivos",
+    "loadingFiles": "Carregando arquivos...",
+    "failedToLoad": "Falha ao carregar",
+    "retry": "Tentar novamente",
+    "folderEmpty": "Esta pasta está vazia",
+    "uploadOrCreate": "Envie arquivos ou crie pastas",
+    "createFolder": "Criar Pasta",
+    "folderName": "Nome da pasta",
+    "cancel": "Cancelar",
+    "create": "Criar"
+  },
+  "workers": {
+    "title": "Workers",
+    "instructions": {
+      "title": "Prompt do Sistema",
+      "description": "Defina como seu worker deve se comportar",
+      "loading": "Carregando instruções...",
+      "saving": "Salvando...",
+      "saveChanges": "Salvar Alterações"
+    },
+    "loadingWorker": "Carregando worker...",
+    "core": "Principal",
+    "capabilitiesEnabled": "{{enabled}} / {{total}} capacidades habilitadas",
+    "toolConfiguration": "Configuração de ferramentas",
+    "configureToolsDescription": "Configure as ferramentas e suas capacidades individuais para seu agente",
+    "toolsEnabled": "{{enabled}} / {{total}} habilitadas",
+    "loadingTools": "Carregando ferramentas...",
+    "noToolsAvailable": "Nenhuma ferramenta disponível",
+    "toolsWillAppear": "As ferramentas aparecerão aqui quando disponíveis",
+    "sunaToolsManaged": "As ferramentas do Suna são gerenciadas centralmente e não podem ser editadas.",
+    "toolsNotEditable": "Estas ferramentas não podem ser editadas.",
+    "cannotEditTools": "Não é possível editar",
+    "sunaToolsManagedAlert": "As ferramentas do Suna são gerenciadas centralmente.",
+    "savingChanges": "Salvando...",
+    "saveChanges": "Salvar alterações"
+  },
+  "tools": {
+    "executing": "Executando ferramenta",
+    "input": "Entrada",
+    "output": "Saída",
+    "noContentAvailable": "Nenhum conteúdo disponível",
+    "processing": "Processando",
+    "loading": "Carregando",
+    "searching": "Pesquisando",
+    "completed": "Concluído",
+    "failed": "Falhou"
+  },
+  "composio": {
+    "noAppsFound": "Nenhum app encontrado",
+    "noAppsAvailable": "Nenhum app disponível",
+    "searchApps": "Pesquisar apps...",
+    "searchTools": "Pesquisar ferramentas...",
+    "failedToLoadTools": "Falha ao carregar ferramentas",
+    "retry": "Tentar novamente",
+    "noToolsFound": "Nenhuma ferramenta encontrada",
+    "saving": "Salvando...",
+    "selectTools": "Selecionar Ferramentas"
   }
 }
 
